[package]
authors = ["João Antônio Cardoso <joao.maker@gmail.com>"]
name = "reflow-controller-rs"
edition = "2021"
version = "0.1.0"
license = "MIT"

[[bin]]
name = "reflow_controller"
harness = false
path = "src/main.rs"

[[module]]
name = "protocol"
harness = false
path = "src/protocol.rs"

[lib]
name = "lib"
harness = false
path = "src/lib.rs"

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.9.0", features = ["stm32f103", "stm32-usbd", "rt", "medium"] }
embedded-hal = "0.2.7"
nb = "1.0.0"
# USB class
# example: https://github.com/stm32-rs/stm32f1xx-hal/blob/master/examples/usb_serial.rs
usb-device = "0.2.8"
usbd-serial = "0.1.1"
# Time abstractions
# cortex-m-rtic = "1.0.0"  # interrupt driven concurrency
# systick-monotonic = "1.0.0"
serde-json-core = "0.4.0" # only static
# serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
# arrayvec = { version = "0.7.2", default-features = false, features = ["serde"] }
heapless = { version = "0.7", features = ["serde"] }

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = true
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = "z" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = 'false'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }